fixed spacing

--- a/mascot/style.css
+++ b/mascot/style.css
@@ -80,10 +80,10 @@ li.game-bottom{
 
 .selection-box {
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 5px;
   border: 3px solid black;
   border-radius: 8px;
   display: none;
